# parallel--homework-1

./: CMakeLists.txt  README.md  main.cpp  quicksort.h
